--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "valotod-api",
   "version": "1.0.0",
   "description": "valorant custom api",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
